<resources>
    <string name="app_name">FirebaseAccountDemo</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">email</string>
    <string name="button">Button</string>
    <string name="password">Password</string>
    <string name="create_your_account">Create your Account</string>
    <string name="username">Username</string>
    <string name="create_account">Create Account</string>
    <string name="sign_up">Sign Up</string>
    <string name="let_s_create_your_account">Let\'s create your account</string>
    <string name="please_enter_all_the_information_below">Please enter all the information below</string>
    <string name="log_in">Log in</string>
    <string name="let_s_log_in_into_your_account">Let\'s log in into your account</string>
    <string name="welcome_to_teayudo">Welcome to TeAyudo!</string>
    <string name="please_choose_one_of_the_options_below">Please choose one of the options below</string>
    <string name="enable">Enable</string>
    <string name="manage_account">Manage Account</string>
    <string name="todo">TODO</string>
    <string name="change_picture">change picture</string>
    <string name="here_you_can_manage_your_account">Here you can manage your account</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="change_password">Change Password</string>
    <string name="more_features_are_coming_soon">More features are coming soon!</string>
    <string name="sign_out">Sign out</string>

</resources>